loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:6: error: not found: value npb
    nbp=npb+1
        ^