loopdowhile.Poucet1.scala.code
var nbp:Int=0
do{
  for(i<-1 to 5){
  avance();
  if(estSurBiscuit()==true){
    nbp=npb+1
  }
  }
  if(nbp>=3){gauche();}
   if(nbp<=2){droite();}
	nbp=0;  
}
   while (!sortieTrouvee())
  